--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "eslint . && eslint test/. --env mocha && mocha",
-		"start": "node index.js"
+		"start": "node index.js",
 		"fix": "eslint . --fix && eslint test/. --env mocha --fix"
 	},
 	"author": "ethanlaj#8805",
