--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,13 @@
 		"sourceType": "module"
 	},
 	"plugins": [
-		"json"
+		"json",
+		"promise"
 	],
 	"rules": {
 		"max-len": [
-			"error", {
+			"error",
+			{
 				"code": 1000
 			}
 		],
@@ -41,6 +43,26 @@
 			"error",
 			"always"
 		],
-		"no-console": ["warn", { "allow": ["warn", "error"] }]
+		"promise/always-return": "off",
+		"promise/no-return-wrap": "error",
+		"promise/param-names": "error",
+		"promise/catch-or-return": "error",
+		"promise/no-native": "off",
+		"promise/no-nesting": "off",
+		"promise/no-promise-in-callback": "warn",
+		"promise/no-callback-in-promise": "warn",
+		"promise/avoid-new": "off",
+		"promise/no-new-statics": "error",
+		"promise/no-return-in-finally": "warn",
+		"promise/valid-params": "warn",
+		"no-console": [
+			"off",
+			{
+				"allow": [
+					"warn",
+					"error"
+				]
+			}
+		]
 	}
 }
