--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"discord.js": "^11.3.0",
 		"eslint": "^4.19.1",
 		"eslint-plugin-json": "^1.2.0",
+		"eslint-plugin-promise": "^3.8.0",
 		"express": "^4.16.3",
 		"mocha": "^5.2.0",
 		"random-string": "^0.2.0",
